--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="/img/Logo.png" alt="logo">
+            <img src="img/Logo.png" alt="logo">
             <nav>
                 <ul class="barra_nav">
                     <li><a href="#"></a>Categorias</li>
@@ -46,7 +46,7 @@
                     <p>Envío gratis</p>
                 </div>
                 <div class="card">
-                    <img src="/img/mortal-kombat.png" alt="Juego ps4 Mortal kombat">
+                    <img src="img/mortal-kombat.png" alt="Juego ps4 Mortal kombat">
                     <h3>$3200</h3>
                     <h4>12 x $266,66 sin interés</h4>
                     <p>Envío gratis</p>
@@ -71,7 +71,7 @@
     <footer>
         <div class="top-footer">
             <div >
-                <img src="/img/Logo.png" alt="logo">
+                <img src="img/Logo.png" alt="logo">
             </div>
             <div class="z">
                 <h5>Redes Sociales</h5>
